k8s/k8s-yml/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    app: nginx
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: nginx          # service with same group.name will use the same ALB
    external-dns.alpha.kubernetes.io/hostname: nginx.cmcloudlab857.info
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:318511487527:certificate/92f809d2-8913-4b3d-8e92-b9cf8d7aecbf    
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/listen-ports: "[{\"HTTP\":80,\"HTTPS\": 443}]"
spec:
  tls:
  - hosts:
    - nginx.cmcloudlab857.info
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-svc
            port: 
              number: 80
